// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionItem "open" command renders as link 1`] = `
<DocumentFragment>
  <span>
    <a
      class="anchorLink btn btnLink test-action-item actionItemLink"
      href="https://example.com/bar"
      tabindex="0"
    >
       t 
      <svg
        aria-hidden="true"
        class="mdi-icon"
        fill="currentColor"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
        />
      </svg>
    </a>
  </span>
</DocumentFragment>
`;

exports[`ActionItem "open" command renders as link that opens in a new tab, but without icon for a different origin as the alt action and a primary action defined 1`] = `
<DocumentFragment>
  <span>
    <a
      class="anchorLink btn btnLink test-action-item actionItemLink"
      href="https://other.com/foo"
      rel="noopener noreferrer"
      tabindex="0"
      target="_blank"
    >
       primary 
    </a>
  </span>
</DocumentFragment>
`;

exports[`ActionItem "open" command renders as link with icon and opens a new tab for a different origin 1`] = `
<DocumentFragment>
  <span>
    <a
      class="anchorLink btn btnLink test-action-item actionItemLink"
      href="https://other.com/foo"
      rel="noopener noreferrer"
      tabindex="0"
      target="_blank"
    >
       t 
      <svg
        aria-hidden="true"
        class="mdi-icon"
        fill="currentColor"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
        />
      </svg>
    </a>
  </span>
</DocumentFragment>
`;

exports[`ActionItem actionItem variant 1`] = `
<DocumentFragment>
  <button
    aria-label="d"
    class="test-action-item"
    type="button"
  >
    <img
      alt="d"
      src="u"
    />
     g: t 
  </button>
</DocumentFragment>
`;

exports[`ActionItem non-actionItem variant 1`] = `
<DocumentFragment>
  <button
    aria-label="d"
    class="test-action-item"
    type="button"
  >
    <img
      alt="d"
      src="u"
    />
     g: t 
  </button>
</DocumentFragment>
`;

exports[`ActionItem non-pressed actionItem 1`] = `
<DocumentFragment>
  <button
    aria-pressed="false"
    class="test-action-item"
    data-action-item-pressed="false"
    type="button"
  >
     b 
  </button>
</DocumentFragment>
`;

exports[`ActionItem noop command 1`] = `
<DocumentFragment>
  <span>
    <img
      alt="d"
      src="u"
    />
     g: t
  </span>
</DocumentFragment>
`;

exports[`ActionItem pressed toggle actionItem 1`] = `
<DocumentFragment>
  <button
    aria-pressed="true"
    class="test-action-item"
    data-action-item-pressed="true"
    type="button"
  >
     b 
  </button>
</DocumentFragment>
`;

exports[`ActionItem run command 1`] = `
<DocumentFragment>
  <button
    aria-label="d"
    class="test-action-item"
    type="button"
  >
    <img
      alt="d"
      src="u"
    />
     g: t 
  </button>
</DocumentFragment>
`;

exports[`ActionItem run command 2`] = `
<DocumentFragment>
  <button
    aria-label="d"
    class="test-action-item"
    type="button"
  >
    <img
      alt="d"
      src="u"
    />
     g: t 
  </button>
</DocumentFragment>
`;

exports[`ActionItem run command with error 1`] = `
<DocumentFragment>
  <button
    aria-label="d"
    class="test-action-item"
    type="button"
  >
    <img
      alt="d"
      src="u"
    />
     g: t 
  </button>
</DocumentFragment>
`;

exports[`ActionItem run command with showLoadingSpinnerDuringExecution 1`] = `
<DocumentFragment>
  <button
    aria-disabled="true"
    aria-label="d"
    class="test-action-item actionItemLoading"
    type="button"
  >
    <img
      alt="d"
      src="u"
    />
     g: t 
    <div
      class="loader"
      data-testid="action-item-spinner"
    >
      <div
        aria-label="Loading"
        aria-live="polite"
        class="mdi-icon loadingSpinner"
        data-loading-spinner="true"
        role="img"
      />
    </div>
  </button>
</DocumentFragment>
`;

exports[`ActionItem run command with showLoadingSpinnerDuringExecution 2`] = `
<DocumentFragment>
  <button
    aria-label="d"
    class="test-action-item"
    type="button"
  >
    <img
      alt="d"
      src="u"
    />
     g: t 
  </button>
</DocumentFragment>
`;

exports[`ActionItem title element 1`] = `
<DocumentFragment>
  <button
    aria-label="d"
    class="test-action-item"
    type="button"
  >
    <span>
      t2
    </span>
     
  </button>
</DocumentFragment>
`;
